--- a/BridgeTS/tsconfig.json
+++ b/BridgeTS/tsconfig.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "target":"ES5",
     "module": "ES2015",
-    "lib": ["dom", "esnext"],
+    "lib": ["dom", "ES5"],
     "importHelpers": true,
     "allowSyntheticDefaultImports": true,
     // output .d.ts declaration files for consumers
@@ -20,14 +20,14 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     // noUnused* overlap with @typescript-eslint/no-unused-vars, can disable if duplicative
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     // use Node's module resolution algorithm, instead of the legacy TS one
     "moduleResolution": "node",
     // transpile JSX to React.createElement
     "jsx": "react",
     // interop between ESM and CJS modules. Recommended by TS
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     // significant perf increase by skipping checking .d.ts files, particularly those in node_modules. Recommended by TS
     "skipLibCheck": true,
     // error out if import and file system have a casing mismatch. Recommended by TS
